<resources>
    <string name="app_name">SFoods</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_tab_home">Home</string>
    <string name="title_tab_cart">Keranjang</string>
    <string name="title_tab_profile">Profile</string>
    <string name="text_profile">Profile</string>
    <string name="text_hint_name">Nama</string>
    <string name="text_hint_email">Email</string>
    <string name="text_name">Asnafi</string>
    <string name="text_greetings">Hari ini kamu mau makan apa?</string>
    <string name="text_search_hint">Cari makanan favoritmu disini</string>
    <string name="text_banner_title">Diskon Hingga 65%</string>
    <string name="text_banner_description">Ayo beli makanan sekarang dan nikmati diskon yang tersedia</string>
    <string name="text_category">Kategori</string>
    <string name="text_category_name">Nasi</string>
    <string name="text_menu">Semua Menu</string>
    <string name="text_menu_title">Nasi Goreng</string>
    <string name="text_menu_rating">4,7</string>
    <string name="text_menu_price">Rp12.0000</string>
    <string name="text_detail_menu">Detail Menu</string>
    <string name="text_detail_name">Nasi Goreng</string>
    <string name="text_detail_rating">4,9</string>
    <string name="text_detail_price">Rp.200000</string>
    <string name="text_detail_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="text_detail_location_header">Location</string>
    <string name="text_detail_location_address">Lorem ipsum dolor</string>
    <string name="text_detail_add_to_cart">Tambah ke keranjang -</string>
    <string name="text_detail_button_plus">+</string>
    <string name="text_detail_quantity">1</string>
    <string name="text_detail_button_min">-</string>
    <string name="text_cart">Keranjang</string>
    <string name="text_cart_menu_name">Nasi Goreng</string>
    <string name="text_cart_menu_price">Rp.200000</string>
    <string name="text_hint_note">Catatan</string>
    <string name="text_cart_min">-</string>
    <string name="text_cart_counter">1</string>
    <string name="text_cart_plus">+</string>
    <string name="text_button_order">Pesan</string>
    <string name="text_total_price">Total Harga :</string>
    <string name="text_total_price_number">Rp.600000</string>
    <string name="text_checkout_header">Checkout</string>
    <string name="text_checkout_button">Bayar</string>
    <string name="text_cart_add_to_cart">Tambah ke keranjang - %1$s</string>
    <string name="text_cart_add_menu_success">Berhasil menambahkan menu</string>
    <string name="text_cart_add_menu_failed">Gagal menambahkan menu</string>
    <string name="text_checkout_quantity">Qty : 12</string>
    <string name="text_cart_empty">Cart is Empty</string>
    <string name="text_cart_is_empty">Cart is Empty</string>
    <string name="text_order_success">Pesanan anda berhasil diproses</string>
    <string name="text_order_to_home">Kembali ke Home</string>
    <string name="text_category_empty">Tidak ada category tersedia</string>
    <string name="text_category_error">Gagal memuat kategori</string>
    <string name="text_menu_empty">Tidak ada menu tersedia</string>
    <string name="text_menu_error">Gagal memuat menu</string>
    <string name="text_hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_account_question">Don\'t have an account?</string>
    <string name="text_register">Register</string>
    <string name="text_have_an_account">Have an account?</string>
    <string name="text_full_name">Full Name</string>
    <string name="text_hint_confirm_password">Confirm Password</string>
    <string name="text_error_less_password">Password harus lebih dari 8 huruf</string>
    <string name="text_password_not_match">Password tidak sama\n</string>
    <string name="text_error_name_cannot_empty">Nama tidak boleh kosong</string>
    <string name="text_error_email_empty">Email tidak boleh kosong</string>
    <string name="text_error_email_invalid">Email anda salah</string>
    <string name="text_error_password_empty">Password tidak boleh kosong</string>
    <string name="text_button_empty" />
    <string name="text_button_login">Login</string>
    <string name="text_button_register">Register</string>
    <string name="text_log_out">Log Out</string>
    <string name="text_notif_logout">Anda telah Logout</string>
    <string name="text_username_is_empty">Username tidak boleh kosong</string>
    <string name="text_success_update_name">Update nama berhasil</string>
    <string name="text_login_success">Login Berhasil</string>
    <string name="text_login_failed">Login Gagal : %1$s</string>
    <string name="text_register_success">Register Berhasil</string>
    <string name="text_register_failed">Register Gagal : %1$s</string>
    <string name="text_title_method_delivery">Metode Pengiriman</string>
    <string name="text_method_pickup">Pick Up</string>
    <string name="text_method_delivery">Delivery</string>
    <string name="text_title_checkout_menu">Menu Pesanan</string>
    <string name="text_title_method_payment">Metode Pembayaran</string>
    <string name="text_method_cash">Cash</string>
    <string name="text_method_ewallet">E-Wallet</string>
    <string name="text_title_order_summary">Menu Order Summary</string>
    <string name="text_hello">Halo,</string>
    <string name="text_header_user">User123</string>
</resources>