<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_cart_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_cart_menu_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_cart_menu_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/iv_cart_delete"
        app:layout_constraintStart_toEndOf="@+id/iv_cart_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_cart_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_cart_menu_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_cart_menu_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_cart_menu_price"
        app:layout_constraintEnd_toEndOf="@+id/tv_cart_menu_name"
        app:layout_constraintStart_toStartOf="@+id/tv_cart_menu_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_cart_menu_name" />

    <TextView
        android:id="@+id/tv_cart_plus"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/bg_rounded_rectangle"
        android:backgroundTint="@color/seed"
        android:gravity="center"
        android:text="@string/text_cart_plus"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/iv_cart_image"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_cart_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/text_cart_counter"
        app:layout_constraintBottom_toBottomOf="@+id/iv_cart_image"
        app:layout_constraintEnd_toStartOf="@+id/tv_cart_plus"
        app:layout_constraintTop_toTopOf="@+id/tv_cart_plus" />

    <TextView
        android:id="@+id/tv_cart_min"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/bg_rounded_rectangle"
        android:gravity="center"
        android:text="@string/text_cart_min"
        android:textColor="@color/seed"
        app:layout_constraintBottom_toBottomOf="@+id/iv_cart_image"
        app:layout_constraintEnd_toStartOf="@+id/tv_cart_counter" />


    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_marginVertical="12dp"
        android:background="@drawable/bg_rounded_rectangle"
        android:backgroundTint="@color/md_theme_light_secondaryContainer"
        android:hint="@string/text_hint_note"
        android:paddingHorizontal="12dp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_cart_image" />


</androidx.constraintlayout.widget.ConstraintLayout>