<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="12dp">

    <ImageView
        android:id="@+id/iv_checkout_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_checkout_menu_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_cart_menu_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_checkout_image"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_cart_menu_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_cart_menu_price"
        app:layout_constraintEnd_toEndOf="@+id/tv_checkout_menu_name"
        app:layout_constraintStart_toStartOf="@+id/tv_checkout_menu_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_checkout_menu_name" />

    <TextView
        android:id="@+id/tv_checkout_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_checkout_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/iv_checkout_image" />

    <TextView
        android:id="@+id/tv_checkout_notes"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/bg_rounded_rectangle"
        android:backgroundTint="@color/md_theme_light_secondaryContainer"
        android:textSize="12sp"
        android:text="Tes"
        android:paddingVertical="4dp"
        android:paddingHorizontal="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_checkout_image" />

</androidx.constraintlayout.widget.ConstraintLayout>